--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,11 +2,8 @@
 <html lang="zh" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>用户登录</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-    <script src="../js/jquery-1.8.0.js"></script>
+    <title>错误页面</title>
+    <link rel="stylesheet" type="text/css" href="dear/css/bootstrap.min.css" />
 </head>
-<h2>没有登录，不给看</h2>
-<h2><a href="/">去登陆</a></h2>
-
+<h2>不好意思，服务器开小差了</h2>
 </html>
