--- a/src/main/resources/templates/newIndex.html
+++ b/src/main/resources/templates/newIndex.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>用户登录</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" /><!--CSS RESET-->
-    <link rel="stylesheet" type="text/css" href="../css/login.css" />
-    <script src="../js/jquery-1.8.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.css" /><!--CSS RESET-->
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <script src="js/jquery-1.8.0.min.js"></script>
+    <script src="js/enc/Barrett.js"></script>
+    <script src="js/enc/BigInt.js"></script>
+    <script src="js/enc/RSA.js"></script>
 </head>
 <div class="form-bg">
     <div class="container">
@@ -16,10 +19,10 @@
                 <form class="form-horizontal">
                     <div class="heading">登录</div>
                     <div class="form-group">
-                        <i class="fa fa-user"></i><input required="" name="name"  type="email" class="form-control" placeholder="Username" id="reg_user">
+                        <i class="fa fa-user"></i><input required="" name="name"  type="email" class="form-control" placeholder="请输入用户名或id" id="reg_user">
                     </div>
                     <div class="form-group">
-                        <i class="fa fa-lock"></i><input required=""  name="password" type="password" class="form-control" placeholder="Password" id="reg_password">
+                        <i class="fa fa-lock"></i><input required=""  name="password" type="password" class="form-control" placeholder="请输入密码" id="reg_password">
                     </div>
                     <div class="form-group">
                         <button type="button" id="loginBtn" class="btn btn-default"><i class="fa fa-arrow-right"></i></button>
@@ -29,10 +32,14 @@
         </div>
     </div>
 </div>
-<div class="row" id="errorMsg" style="display: none">
+<div class="row" id="errorMsg" style="display: none;text-align: center;margin :30px;">
     <div class="col-md-4">
-        <div class="alert alert-danger">密码错误</div>
+        <div class="alert alert-danger" id="errorMsgTxt" style="color: red">密码错误</div>
     </div>
+</div>
+<div class="jumbotron text-center" style="margin-bottom:0;padding-top: 10px;background-color: #fff;
+    padding-bottom: 1px;">
+    <p><a href="http://beian.miit.gov.cn" style="font-family:  Helvetica, Arial, sans-serif;font-size: 10px;">蜀ICP备20012306号</a></p>
 </div>
 <script>
 
@@ -45,18 +52,28 @@
             $.post("login",
                 {
                     name: $("#reg_user").val(),
-                    password: $("#reg_password").val()
+                    password:rsa($("#reg_password").val())
                 },
                 function (data, status) {
                    if(data == "1"){
                        $("#errorMsg").hide();
                        window.location.href = "show";
                    }else {
+                       $("#errorMsgTxt").html(data);
                        setTimeout($("#errorMsg").show(), 380);
                    }
                 });
 
         });
     });
+</script>
+<script>
+    function rsa(arg){
+        setMaxDigits(130);
+        var PublicExponent = "10001";
+        var modulus = "be44aec4d73408f6b60e6fe9e3dc55d0e1dc53a1e171e071b547e2e8e0b7da01c56e8c9bcf0521568eb111adccef4e40124b76e33e7ad75607c227af8f8e0b759c30ef283be8ab17a84b19a051df5f94c07e6e7be5f77866376322aac944f45f3ab532bb6efc70c1efa524d821d16cafb580c5a901f0defddea3692a4e68e6cd";
+        var key = new RSAKeyPair(PublicExponent,"",modulus);
+        return encryptedString(key, arg);
+    }
 </script>
 </html>
